--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -19,7 +19,7 @@ $grid-col-width: $grid-container-width / $grid-cols; // Ширина одной 
 $grid14-col-width: $grid-container-width / 14; // Ширина одной колонки в 14 колоночной сетке
 $grid9-col-width: $grid-container-width / 9; // Ширина одной колонки в 9  колоночной сетке
 $breakpoints: ('xl': 1600px, 'lg': 1300px, 'bg': 1160px, 'md': 1020px, 'sm': 768px, 'xs': 480px);
-$color-warning: #000000;
+$color-warning: #000;
 $nd-breakpoints: ('xl': 1850px, 'lg': 1400px, 'bg': 1160px, 'md': 1030px, 'sm': 768px, 'xs': 480px);
 
 // ##########
@@ -195,8 +195,12 @@ $nd-color-hotdesk: #fd9603;
 $nd-color-fixeddesk: #ec4234;
 $nd-color-meetingroom: #1ad5ef;
 $nd-color-privateoffice: #2af787;
+$nd-color-daypass: #006cea;
 $nd-color-gray-text4: #525a65;
 $nd-color-gray-text5: #787878;
+$nd-color-border-light: #afb4b5;
+$nd-color-gray-text6: #86919e;
+$nd-color-gray-text7: #c1c1c1;
 
 // ##########
 // Transitions
