--- a/app/blocks/page/page.scss
+++ b/app/blocks/page/page.scss
@@ -23,24 +23,37 @@
 .nd-page {
   display: block;
   box-sizing: border-box;
-  padding-top: 92px;
+  padding-top: 94px;
   overflow: hidden;
   width: 100%;
   max-width: 100vw;
 
+  @include screen('xl', max, 2) {
+    padding-top: 94px;
+  }
+
   @include screen('lg', max, 2) {
-    padding-top: 60px;
+    padding-top: pxtovw(94, 1366);
   }
 
   @include screen('md', max, 2) {
-    padding-top: pxtovw(60, 960);
+    padding-top: pxtovw(73, 960);
   }
 
   @include screen('sm', max, 2) {
-    padding-top: pxtovw(60, 375);
+    padding-top: pxtovw(73, 375);
   }
 
   &_main {
+    padding-top: 147px;
+
+    @include screen('lg', max, 2) {
+      padding-top: pxtovw(147, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      padding-top: pxtovw(110, 960);
+    }
     @include screen('sm', max, 2) {
       padding-top: 0;
     }
