--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -17,6 +17,7 @@ include ../blocks/bubble/bubble
 include ../blocks/burger/burger
 include ../blocks/button-heart/button-heart
 include ../blocks/button/button
+include ../blocks/button/nd-button
 include ../blocks/calendar/calendar
 include ../blocks/card-mask/card-mask
 include ../blocks/category-filter/category-filter
@@ -56,8 +57,8 @@ include ../blocks/gradients/gradients
 include ../blocks/gradients/gradients-redesign
 include ../blocks/grid/grid
 include ../blocks/header-menu/header-menu
-include ../blocks/header-user/header-user
 include ../blocks/header-menu/nd-header-menu
+include ../blocks/header-user/header-user
 include ../blocks/header-user/nd-header-user
 include ../blocks/heading/heading
 include ../blocks/hide-button/hide-button
@@ -113,6 +114,7 @@ include ../blocks/price/price
 include ../blocks/processing-status/processing-status
 include ../blocks/progress/progress
 include ../blocks/promo-section/promo-section
+include ../blocks/promo-slider/promo-slider
 include ../blocks/put-block-into-slot/put-block-into-slot
 include ../blocks/rating/rating
 include ../blocks/request-info/request-info
@@ -121,6 +123,7 @@ include ../blocks/request-type/request-type
 include ../blocks/request/request
 include ../blocks/scroll-form/scroll-form
 include ../blocks/scroll-form/scroll-form-v2
+include ../blocks/section/nd-section
 include ../blocks/section/section
 include ../blocks/selectable-block/selectable-block
 include ../blocks/short-info/short-info
@@ -130,6 +133,7 @@ include ../blocks/side-image/side-image
 include ../blocks/sidebar/sidebar
 include ../blocks/sign-input/sign-input
 include ../blocks/signatures/signatures
+include ../blocks/slider/nd-slider
 include ../blocks/slider/slider
 include ../blocks/slogan/slogan
 include ../blocks/social-button/social-button
@@ -138,6 +142,8 @@ include ../blocks/socials/socials
 include ../blocks/space-description/space-description
 include ../blocks/space-info-table/space-info-table
 include ../blocks/space-reservation/space-reservation
+include ../blocks/space-type/space-type
+include ../blocks/space/nd-space
 include ../blocks/space/space
 include ../blocks/spoiler/spoiler
 include ../blocks/state/state
@@ -151,6 +157,7 @@ include ../blocks/table-head/table-head
 include ../blocks/table/table
 include ../blocks/tabs/tabs
 include ../blocks/team-check/team-check
+include ../blocks/text-block/text-block
 include ../blocks/text-list/text-list
 include ../blocks/time/time
 include ../blocks/timer/timer
@@ -182,6 +189,7 @@ include ../components/header/header
 include ../components/header/nd-header
 include ../components/lead/lead
 include ../components/location/location
+include ../components/main-lead/main-lead
 include ../components/main-menu/main-menu
 include ../components/offer-panel/offer-panel
 include ../components/offer-short/offer-short
@@ -214,18 +222,21 @@ include ../components/popup-reminder-save/popup-reminder-save
 include ../components/popup-signin/popup-signin
 include ../components/popup-subscribe/popup-subscribe
 include ../components/popup-warning/popup-warning
+include ../components/promo/promo
 include ../components/reservation-request/reservation-request
 include ../components/reservation-request/reservation-request-popup
 include ../components/results/results
 include ../components/search-filter/search-filter
 include ../components/search-map/search-map
+include ../components/search-panel/search-panel
 include ../components/side-navigation/side-navigation
 include ../components/space-info/space-info
 include ../components/space-offer/space-offer
 include ../components/space-short/space-short
 include ../components/success-message/success-message
 include ../components/suggestion-form/suggestion-form
+include ../components/tags-map/tags-map
 include ../components/ubo-card/ubo-card
 include ../components/ui-kit/ui-kit
-include ../components/user-menu-panel/user-menu-panel
 include ../components/user-menu-panel/nd-user-menu-panel
+include ../components/user-menu-panel/user-menu-panel
