--- a/app/blocks/promo-slider/promo-slider.scss
+++ b/app/blocks/promo-slider/promo-slider.scss
@@ -1,3 +1,19 @@
 .promo-slider {
   $b: &;
+
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+
+  &__navigation {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+  }
+
+  &__container {
+    display: block;
+    width: 100%;
+  }
 }
