--- a/app/components/footer/nd-footer.scss
+++ b/app/components/footer/nd-footer.scss
@@ -9,21 +9,26 @@
   position: relative;
   box-shadow: 0 1vw 0 0 $nd-color-footer-bg;
   padding: 78px 0 107px;
+  margin-top: 165px;
 
   @include screen('xl', max, 2) {
     padding: 53px 0 72px;
+    margin-top: 145px;
   }
 
   @include screen('lg', max, 2) {
     padding: pxtovw(57, 1366) 0 pxtovw(63, 1366);
+    margin-top: pxtovw(100, 1366);
   }
 
   @include screen('md', max, 2) {
     padding: pxtovw(50, 960) 0 pxtovw(46, 960);
+    margin-top: pxtovw(88, 960);
   }
 
   @include screen('sm', max, 2) {
     padding: pxtovw(55, 375) 0 pxtovw(103, 375);
+    margin-top: pxtovw(55, 375);
   }
 
   &__top {
