--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -201,6 +201,12 @@ $nd-color-gray-text5: #787878;
 $nd-color-border-light: #afb4b5;
 $nd-color-gray-text6: #86919e;
 $nd-color-gray-text7: #c1c1c1;
+$nd-color-input-border: $nd-color-gray-text6;
+$nd-color-input-focus-border: $nd-color-basic;
+$nd-color-input-error-border: #cc3838;
+$nd-color-border: #eaeaea;
+$nd-color-border2: #a3acba;
+$nd-color-border3: #d4dfe2;
 
 // ##########
 // Transitions
