--- a/app/blocks/button/nd-button.scss
+++ b/app/blocks/button/nd-button.scss
@@ -96,9 +96,188 @@
     #{$b}.is-loading & {
       opacity: 0;
     }
+
+    &_circle {
+      border-radius: 50%;
+      border: 1px solid currentColor;
+      width: 12px;
+      height: 12px;
+
+      @include screen('lg', max, 2) {
+        width: pxtovw(12, 1366);
+        height: pxtovw(12, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        width: pxtovw(12, 960);
+        height: pxtovw(12, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: pxtovw(12, 375);
+        height: pxtovw(12, 375);
+      }
+
+      &_orange {
+        border-color: $nd-color-hotdesk;
+      }
+
+      &_red {
+        border-color: $nd-color-fixeddesk;
+      }
+
+      &_blue {
+        border-color: $nd-color-meetingroom;
+      }
+
+      &_green {
+        border-color: $nd-color-privateoffice;
+      }
+    }
+
+    &_user {
+      width: 13px;
+      height: 13px;
+      background-size: 100% 100%;
+      background-repeat: no-repeat;
+      background-position: 50% 50%;
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 14.39 15.18'%3E%3Ctitle%3End-user%3C/title%3E%3Cpath d='M7.19,9A4.42,4.42,0,0,1,2.86,4.49,4.42,4.42,0,0,1,7.19,0a4.41,4.41,0,0,1,4.33,4.49A4.41,4.41,0,0,1,7.19,9Zm0-8A3.42,3.42,0,0,0,3.86,4.49,3.41,3.41,0,0,0,7.19,8a3.41,3.41,0,0,0,3.33-3.48A3.41,3.41,0,0,0,7.19,1Z' fill='%23525a65'/%3E%3Cpath d='M13.89,15.18a.5.5,0,0,1-.5-.5c0-1.94-2.84-3.58-6.2-3.58S1,12.74,1,14.68a.5.5,0,0,1-.5.5.5.5,0,0,1-.5-.5c0-2.57,3.16-4.58,7.19-4.58s7.2,2,7.2,4.58A.5.5,0,0,1,13.89,15.18Z' fill='%23525a65'/%3E%3C/svg%3E");
+
+      @include screen('lg', max, 2) {
+        width: pxtovw(13, 1366);
+        height: pxtovw(13, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        width: pxtovw(13, 960);
+        height: pxtovw(13, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: pxtovw(13, 375);
+        height: pxtovw(13, 375);
+      }
+    }
+  }
+
+  &_fz17 {
+    font-size: 17px;
+    line-height: (21 / 17);
+
+    @include screen('lg', max, 2) {
+      font-size: pxtovw(17, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      font-size: pxtovw(17, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      font-size: pxtovw(17, 375);
+    }
+  }
+
+  &_fz15 {
+    font-size: 15px;
+    line-height: (18 / 15);
+
+    @include screen('xl', max, 2) {
+      font-size: 13px;
+      line-height: (16 / 13);
+    }
+
+    @include screen('lg', max, 2) {
+      font-size: pxtovw(13, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      font-size: pxtovw(13, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      font-size: pxtovw(13, 375);
+    }
+  }
+
+  &_pad10 {
+    padding: 0 10px;
+
+    @include screen('lg', max, 2) {
+      padding: 0 pxtovw(10, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      padding: 0 pxtovw(10, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      padding: 0 pxtovw(10, 375);
+    }
   }
 
   &_border {
+    box-sizing: border-box;
+    border: 1px solid $nd-color-border;
+    background-color: transparent;
+    color: $nd-color-basic;
+    transition: border $ease-main;
 
+    &:hover {
+      border-color: currentColor;
+    }
+  }
+
+  &_icon_start {
+    padding: 0 16px 0 30px;
+
+    @include screen('lg', max, 2) {
+      padding: 0 pxtovw(16, 1366) 0 pxtovw(30, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      padding: 0 pxtovw(16, 960) 0 pxtovw(30, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      padding: 0 pxtovw(16, 375) 0 pxtovw(30, 375);
+    }
+
+    #{$b} {
+      &__icon {
+        position: absolute;
+        top: 50%;
+        left: 9px;
+        transform: translate3d(0, -50%, 0);
+        transform-origin: 50% 50%;
+
+        @include screen('lg', max, 2) {
+          left: pxtovw(9, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          left: pxtovw(9, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          left: pxtovw(9, 375);
+        }
+
+        &_user {
+          left: 15px;
+
+          @include screen('lg', max, 2) {
+            left: pxtovw(15, 1366);
+          }
+
+          @include screen('md', max, 2) {
+            left: pxtovw(15, 960);
+          }
+
+          @include screen('sm', max, 2) {
+            left: pxtovw(9, 375);
+          }
+        }
+      }
+    }
   }
 }
