--- a/app/blocks/section/nd-section.scss
+++ b/app/blocks/section/nd-section.scss
@@ -78,6 +78,24 @@
     }
 
     &_news {
+      margin-bottom: 165px;
+
+      @include screen('xl', max, 2) {
+        margin-bottom: 155px;
+      }
+
+      @include screen('lg', max, 2) {
+        margin-bottom: pxtovw(132, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-bottom: pxtovw(140, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-bottom: pxtovw(86, 375);
+      }
+
       &:not(:first-child) {
         margin-top: 60px;
 
@@ -107,15 +125,15 @@
       margin-top: 66px;
 
       @include screen('xl', max, 2) {
-        margin-top: 96px;
+        margin-top: 54px;
       }
 
       @include screen('lg', max, 2) {
-        margin-top: pxtovw(90, 1366);
+        margin-top: pxtovw(54, 1366);
       }
 
       @include screen('md', max, 2) {
-        margin-top: pxtovw(75, 960);
+        margin-top: pxtovw(54, 960);
       }
 
       @include screen('sm', max, 2) {
@@ -128,6 +146,18 @@
       justify-content: space-between;
       box-sizing: border-box;
       padding-top: 54px;
+
+      @include screen('xl', max, 2) {
+        padding-top: 13px;
+      }
+
+      @include screen('lg', max, 2) {
+        padding-top: pxtovw(8, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        padding-top: pxtovw(38, 960);
+      }
 
       @include screen('sm', max, 2) {
         flex-wrap: wrap;
@@ -143,43 +173,46 @@
 
           @include screen('xl', max, 2) {
             width: 26.9%;
+            padding-top: 26px;
           }
 
           @include screen('lg', max, 2) {
             width: pxtovw(360, 1366);
+            padding-top: pxtovw(17, 1366);
           }
 
           @include screen('md', max, 2) {
             width: pxtovw(281, 960);
+            padding-top: pxtovw(14, 960);
           }
 
           @include screen('sm', max, 2) {
             width: 100%;
-          }
-
-          &:not(:last-child) {
-            margin-right: 107px;
-
-            @include screen('xl', max, 2) {
-              margin-right: 100px;
-            }
-
-            @include screen('lg', max, 2) {
-              margin-right: pxtovw(50, 1366);
-            }
-
-            @include screen('md', max, 2) {
-              margin-right: pxtovw(40, 960);
-            }
-
-            @include screen('sm', max, 2) {
-              margin-right: 0;
-            }
+            padding-top: 0;
           }
         }
 
         &__promo-slider {
+          display: block;
           flex: 1;
+          padding-left: 107px;
+          box-sizing: border-box;
+
+          @include screen('xl', max, 2) {
+            padding-left: 100px;
+          }
+
+          @include screen('lg', max, 2) {
+            padding-left: pxtovw(50, 1366);
+          }
+
+          @include screen('md', max, 2) {
+            padding-left: pxtovw(40, 960);
+          }
+
+          @include screen('sm', max, 2) {
+            padding-left: 0;
+          }
 
           @include screen('sm', max, 2) {
             flex: none;
@@ -193,6 +226,11 @@
           letter-spacing: -.04em;
         }
       }
+
+      .promo-slider {
+        width: 100%;
+        max-width: 100%;
+      }
     }
   }
 
@@ -201,19 +239,41 @@
       margin-top: 136px;
 
       @include screen('xl', max, 2) {
-        margin-top: 96px;
+        margin-top: 125px;
       }
 
       @include screen('lg', max, 2) {
-        margin-top: pxtovw(90, 1366);
+        margin-top: pxtovw(88, 1366);
       }
 
       @include screen('md', max, 2) {
-        margin-top: pxtovw(75, 960);
+        margin-top: pxtovw(102, 960);
       }
 
       @include screen('sm', max, 2) {
-        margin-top: pxtovw(43, 375);
+        margin-top: pxtovw(83, 375);
+      }
+    }
+
+    #{$b}__slider {
+      &:not(:first-child) {
+        margin-top: 96px;
+
+        @include screen('xl', max, 2) {
+          margin-top: 71px;
+        }
+
+        @include screen('lg', max, 2) {
+          margin-top: pxtovw(60, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-top: pxtovw(82, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(56, 375);
+        }
       }
     }
   }
