--- a/app/blocks/text-block/text-block.pug
+++ b/app/blocks/text-block/text-block.pug
@@ -3,5 +3,6 @@ mixin text-block()
     block
 
 mixin text-block-image(img)
-  +e.PICTURE.media&attributes(attributes)
-    +e.IMG.image(src=img)
+  +e.media&attributes(attributes)
+    +e.PICTURE.image
+      IMG(src=img)
