--- a/app/components/user-menu-panel/user-menu-panel.scss
+++ b/app/components/user-menu-panel/user-menu-panel.scss
@@ -88,5 +88,23 @@
       pointer-events: auto;
       height: pxtovw(60, 375);
     }
+
+    #{$b} {
+      &__item {
+        &:not(:last-child) {
+          opacity: 0;
+        }
+      }
+    }
+  }
+
+  .nd-header.is-login ~ & {
+    #{$b} {
+      &__item {
+        &:not(:last-child) {
+          opacity: 1;
+        }
+      }
+    }
   }
 }
