--- a/app/blocks/promo-slider/promo-slider.scss
+++ b/app/blocks/promo-slider/promo-slider.scss
@@ -4,16 +4,313 @@
   position: relative;
   display: block;
   box-sizing: border-box;
+  color: $nd-color-basic;
 
   &__navigation {
     position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
     top: 0;
     right: 0;
+    width: 41.2%;
+    z-index: 2;
+
+    @include screen('xl', max, 2) {
+      width: 32.7%;
+    }
+
+    @include screen('lg', max, 2) {
+      width: pxtovw(352, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      width: pxtovw(172, 960);
+      padding-left: pxtovw(40, 960);
+      align-items: flex-end;
+    }
+
+    @include screen('sm', max, 2) {
+      width: pxtovw(92, 375);
+      padding-left: 0;
+      top: pxtovw(-18, 375);
+    }
+  }
+
+  &__media {
+    display: block;
+    flex: 1;
+    padding-right: 70px;
+    box-sizing: border-box;
+
+    @include screen('xl', max, 2) {
+      padding-right: 100px;
+    }
+
+    @include screen('lg', max, 2) {
+      padding-right: pxtovw(80, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      flex: none;
+      width: 100%;
+      padding-right: pxtovw(186, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      padding-right: pxtovw(98, 375);
+    }
+  }
+
+  &__image {
+    position: relative;
+    display: block;
     width: 100%;
+
+    img, svg {
+      width: 100%;
+    }
   }
 
   &__container {
+    position: relative;
+    z-index: 1;
     display: block;
     width: 100%;
+  }
+
+  &__slide {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    align-content: flex-start;
+
+    @include screen('md') {
+      flex-wrap: wrap;
+    }
+  }
+
+  &__content {
+    display: block;
+    box-sizing: border-box;
+    width: 45.3%;
+    flex: none;
+    padding-top: 252px;
+
+    @include screen('xl', max, 2) {
+      width: 36.4%;
+      padding-top: 218px;
+    }
+
+    @include screen('lg', max, 2) {
+      padding-top: pxtovw(207, 1366);
+      width: pxtovw(352, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      padding-top: 0;
+      width: 100%;
+      text-align: right;
+      margin-top: pxtovw(51, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      text-align-last: left;
+      margin-top: pxtovw(46, 375);
+    }
+  }
+
+  &__buttons {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 58px;
+
+    @include screen('xl', max, 2) {
+      margin-top: 20px;
+    }
+
+    @include screen('lg', max, 2) {
+      margin-top: pxtovw(20, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      margin-top: pxtovw(20, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      margin-top: 0;
+    }
+  }
+
+  &__button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 42px;
+    height: 42px;
+    border-radius: 50%;
+    border: 1px solid $nd-color-basic;
+    stroke: $nd-color-border-light;
+    transition: opacity $ease-main, stroke $ease-main;
+    cursor: pointer;
+
+    @include screen('lg', max, 2) {
+      width: pxtovw(40, 1366);
+      height: pxtovw(40, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      width: pxtovw(40, 960);
+      height: pxtovw(40, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      width: pxtovw(30, 375);
+      height: pxtovw(30, 375);
+    }
+
+    &_next {
+      transform: rotate(180deg);
+    }
+
+    &:hover {
+      stroke: currentColor;
+    }
+
+    &.swiper-button-disabled {
+      opacity: .3;
+      pointer-events: none;
+      cursor: default;
+    }
+
+    &:not(:last-child) {
+      margin-right: 18px;
+
+      @include screen('lg', max, 2) {
+        margin-right: pxtovw(18, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-right: pxtovw(18, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-right: pxtovw(13, 375);
+      }
+    }
+
+    svg {
+      flex: none;
+      stroke: inherit;
+      width: 9px;
+      height: 20px;
+      margin-left: -2px;
+
+      @include screen('lg', max, 2) {
+        width: pxtovw(9, 1366);
+        height: pxtovw(20, 1366);
+        margin-left: pxtovw(-2, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        width: pxtovw(9, 960);
+        height: pxtovw(20, 960);
+        margin-left: pxtovw(-2, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: pxtovw(8, 375);
+        height: pxtovw(19, 375);
+        margin-left: pxtovw(-1, 375);
+      }
+    }
+  }
+
+  &__pagination {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 75px;
+
+    span {
+      display: inline-block;
+      width: 6px;
+      height: 6px;
+      border-radius: 3px;
+      background-color: #c4c4c4;
+
+      &.swiper-pagination-bullet-active {
+        background-color: $nd-color-main;
+      }
+
+      &:not(:last-child) {
+        margin-right: 14px;
+      }
+    }
+  }
+
+  &__title {
+    display: block;
+    width: 100%;
+    font-size: 17px;
+    line-height: 1.63;
+    font-weight: 500;
+    text-align: left;
+    letter-spacing: -.02em;
+
+    @include screen('xl', max, 2) {
+      margin-top: 30px;
+    }
+
+    @include screen('lg', max, 2) {
+      font-size: pxtovw(17, 1366);
+      margin-top: pxtovw(19, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      text-align: right;
+      line-height: 1;
+      font-size: pxtovw(17, 960);
+      margin-top: pxtovw(19, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      font-size: pxtovw(13, 375);
+      order: 2;
+      margin-top: pxtovw(15, 375);
+    }
+  }
+
+  &__text {
+    display: inline-block;
+    width: 100%;
+    font-family: $font-stolzl-book;
+    font-weight: 400;
+    line-height: 1.18;
+    letter-spacing: -.02em;
+    font-size: 24px;
+    text-align: left;
+
+    @include screen('lg', max, 2) {
+      font-size: pxtovw(24, 1366);
+      line-height: 1.22;
+    }
+
+    @include screen('md', max, 2) {
+      font-size: pxtovw(20, 960);
+      max-width: pxtovw(381, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      font-size: pxtovw(20, 375);
+      max-width: none;
+    }
+
+    b {
+      font-weight: 500;
+      color: $nd-color-main;
+    }
   }
 }
