--- a/app/blocks/slider/slider.scss
+++ b/app/blocks/slider/slider.scss
@@ -517,7 +517,7 @@
   }
 }
 
-.js-slider-container {
+.js-slider-container, [data-promo-slider-container] {
   opacity: 0;
   transition: opacity $ease-main;
 
